--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de Cookies</title>
 </head>
-<body>
+<body onload="verificarCookie()">
     <h1>Testador de Cookies Profissional</h1>
     <script src="script.js"></script>
 </body>
